--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 </head>
  
 <body>
-    <form name="login" action="./login.php" method="post">
+    <form name="login" action="/" method="post">
         学号: <input type="number" name="ID" value="{{user_id}}"> <br>
         密码: <input type="password" name="passwd"> <br>
         <input type="submit" value="登录">
