--- a/templates/index.html
+++ b/templates/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
+<meta charset="UTF-8">
 <title>文档标题</title>
 </head>
  
 <body>
+    <br><br><br><br><br><br>
+    <center><h2>登录界面</h2></center>
+    <br><br><br><br><br><br>
+    <center>
     <form name="login" action="/" method="post">
-        学号: <input type="number" name="ID" value="{{user_id}}"> <br>
+        学号: <input type="text" name="ID" value="{{user_id}}"> <br>
         密码: <input type="password" name="passwd"> <br>
         <input type="submit" value="登录">
     </form>
+    </center>
     <br>
-    <a href="./YangTest/">跳转</a>
+
+
+    <a href="./YangTest/" >跳转测试</a>
 
 </body>
  
