basic order finish

--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,10 @@
     </center>
     <br>
 
-
+    <a href='{{url_for("test_student_record")}}'>测试学生</a>
+    <br>
+    <a href='{{url_for("test_teacher_monitor")}}'>测试老师</a>
+    <br>
     <a href="./YangTest/" >跳转测试</a>
 
 </body>
