还有文件生成

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -2,25 +2,25 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>¸ü¸ÄÃÜÂë</title>
+<title>æ›´æ”¹å¯†ç </title>
 </head>
  
 <body>
-    <br><br><br><br><br><br>
-    <center><h2>µÇÂ¼½çÃæ</h2></center>
-    <br><br><br><br><br><br>
+    
+    
     <center>
-    <form name="login" action="/" method="post">
-        Ñ§ºÅ: <input type="text" name="ID" value="{{user_id}}"> <br>
-        ÃÜÂë: <input type="password" name="passwd"> <br>
-        <input type="submit" value="µÇÂ¼">
-    </form>
+        <form name="change" action="./" method="post">
+            è¾“å…¥å¯†ç : <input type="password" name="passwd1"> <br>
+            ç¡®è®¤å¯†ç : <input type="password" name="passwd2"> <br>
+            <input type="submit" value="ç™»å½•">
+        </form>
     </center>
-    <br>
+    <script type="text/javascript">
+        var ans = {{test_result}}
+        if (ans == 0)
+            alert("ä¸¤æ¬¡è¾“å…¥çš„å¯†ç ä¸åŒ!")
 
-
-    <a href="./YangTest/" >Ìø×ª²âÊÔ</a>
-
+    </script>
 </body>
  
 </html>
