--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -69,7 +69,8 @@
     <button id="connect-button">CONNECT</button>
     <br><br>
   </div>
-
+  <div id = "userid" style="display: none">{{userid}}</div>
+  <div id = "username" style="display: none">{{username}}</div>
   <div id="video-chat-container" class="video-position" style="display: block">
     <!-- <video id="local-video" class="remote-video" muted="muted" autoplay="autoplay" playsInline="playsInline"></video> -->
     <!-- <video class="remote-video" autoplay="autoplay" playsInline="playsInline"></video> -->
