登录与数据库交互基本完成

--- a/templates/student.html
+++ b/templates/student.html
@@ -75,10 +75,10 @@
     <div id = "userid" >{{userid}}</div>
     <div id = "username">{{username}}</div>
     <div id="buttondiv">
-      <button id="share-screen" value="0" disabled>录制镜头</button>
-      <button id="hide-localbox" value="0" disabled>录制屏幕</button>
-      <button id="disconnect-button" disabled>录制音频</button>
-      <button id="null-button" disabled>断开连接</button>
+      <button id="share_camera" value="0" disabled>录制镜头</button>
+      <button id="share_screen" value="0" disabled>录制屏幕</button>
+      <button id="share_video" disabled>录制音频</button>
+      <button id="disconnect_button" disabled>断开连接</button>
     </div>
     <br>
     <br>
