--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -9,9 +9,10 @@
     
     
     <center>
-        <form name="change" action="./" method="post">
+        <form name="change" action="{{url_for("check_passwd")}}" method="post">
             输入密码: <input type="password" name="passwd1"> <br>
             确认密码: <input type="password" name="passwd2"> <br>
+            <input type="text" name = "userid" value="{{userid}}" style="display: none"><br>
             <input type="submit" value="登录">
         </form>
     </center>
