tired of fucking bug

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,25 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<title>æ›´æ”¹å¯†ç </title>
+<meta charset="GB18030">
+<title>¸ü¸ÄÃÜÂë</title>
 </head>
  
 <body>
     
-    
+    <div>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+
+    </div>
+    <center>
+    <div>
+        ÃÜÂëĞŞ¸ÄÒªÇó:<br>
+        1. ³¤¶ÈÔÚ8~16×Ö·ûÖ®¼ä<br>
+        2. ÒªÇóÓĞ×ÖÄ¸, Êı×Ö, ÆäËû×Ö·û<br>
+    </div>
+    </center>
     <center>
         <form name="change" action="{{url_for("check_passwd")}}" method="post">
-            è¾“å…¥å¯†ç : <input type="password" name="passwd1"> <br>
-            ç¡®è®¤å¯†ç : <input type="password" name="passwd2"> <br>
+            ÊäÈëÃÜÂë: <input type="password" name="passwd1"> <br>
+            È·ÈÏÃÜÂë: <input type="password" name="passwd2"> <br>
             <input type="text" name = "userid" value="{{userid}}" style="display: none"><br>
-            <input type="submit" value="ç™»å½•">
+            <input type="submit" value="µÇÂ¼">
         </form>
     </center>
     <script type="text/javascript">
         var ans = {{test_result}}
         if (ans == 0)
-            alert("ä¸¤æ¬¡è¾“å…¥çš„å¯†ç ä¸åŒ!")
+            alert("Á½´ÎÊäÈëµÄÃÜÂë²»Í¬!")
+        else if (ans == 2)
+            alert("ÃÜÂëÇ¿¶È¹ıµÍ/¹ı¸ß!ÇëÖØĞÂĞŞ¸ÄÃÜÂë")
 
     </script>
 </body>
