--- a/templates/index.html
+++ b/templates/index.html
@@ -25,5 +25,12 @@
     <a href="./YangTest/"  style="display: none">跳转测试</a>
 
 </body>
- 
+<script type="text/javascript">
+    var ans = {{test_result}}
+    if (ans == 1)
+        alert("请先登录!")
+    else if (ans == 2)
+        alert("用户权限错误!")
+
+</script>
 </html>
