--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -23,7 +23,7 @@
     </div>
     </center>
     <center>
-        <form name="change" action="{{url_for("check_passwd")}}" method="post">
+        <form name="change" action="{{url_for("change_password")}}" method="post">
              ‰»Î√‹¬Î: <input type="password" name="passwd1"> <br>
             »∑»œ√‹¬Î: <input type="password" name="passwd2"> <br>
             <input type="text" name = "userid" value="{{userid}}" style="display: none"><br>
